--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-resume",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://nicholasysf.github.io/myPortfolio/",
   "dependencies": {
     "@emailjs/browser": "^3.9.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
@@ -27,9 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
